hphp/test/zend/good/Zend/tests/bug46665/bug46665.php
<?hh

<<__EntryPoint>> function main(): void {
  $baz = '\\Foo\\Bar\\Baz';
  new $baz();
  echo 'Done';
}
