hphp/test/zend/bad/Zend/tests/generators/bug65035.php
<?php

function gen() {
    fn();
    yield;
}

function fn() {
    exit('Done');
}

$gen = gen();
$gen->current();

?>